@@ -263,7 +263,6 @@ task ktlintFormat(type: JavaExec, group: "formatting") {
     description = "Fix Kotlin code style deviations."
     classpath = configurations.ktlint
     main = "com.pinterest.ktlint.Main"
-    jvmArgs "--add-opens=java.base/java.lang=ALL-UNNAMED"
     args "-F", "$project.rootDir/**/src/main/**/*.kt"
     args "--android"
 }
